hphp/hack/test/ifc/check/exception_multi_function.php.exp
File "exception_multi_function.php", line 22, characters 1-218:
Data with policy A appears in context B. (Typing[4379])
File "exception_multi_function.php", line 32, characters 1-221:
Data with policy A appears in context B. (Typing[4379])
